add: offline reporting

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
+# Production Server
+API_BASE_URL=https://resq-connect-server.vercel.app
+API_TIMEOUT=30000
+
+# Local Development (uncomment to use)
 # Android Emulator: http://10.0.2.2:3000
 # iOS Simulator: http://localhost:3000
 # Physical device (same WiFi): http://<your-machine-ip>:3000
 # Physical device (USB): http://localhost:3000 (after: adb reverse tcp:3000 tcp:3000)
-API_BASE_URL=http://10.0.2.2:3000
-API_TIMEOUT=30000
+# API_BASE_URL=http://10.0.2.2:3000
